bug fix for the creation of a project